# duckdb_flaskapp

./: Dockerfile  app.py  db_setup.py  docker-compose.yml  mydb.db  pyproject.toml  requirements.txt
templates/: customer_form.html  index.html  order_form.html  product_form.html  recent_sales.html  top_customers.html
