[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "A simple Flask app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
duckdb = "1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"